Add ui.zip to jar resources